@@ -2,6 +2,8 @@ serd (UNRELEASED) unstable; urgency=low
 
   * Use path variables in pkgconfig files
   * Install man page to DATADIR (e.g. PREFIX/share/man, not PREFIX/man)
+  * Tolerate invalid characters in string literals by replacing with the
+    Unicode replacement character
 
  -- David Robillard <d@drobilla.net>  (UNRELEASED)
 
